<resources>
    <string name="app_name">WorkIT</string>
    <string name="copyright">\u00A9</string>
    <string name="footerCopyright">\u00A9workIT2021</string>
    <string name="logo">logo</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="remember_device">Remember Device</string>
    <string name="login">Login</string>
    <string name="shift_calender">Shift Calender</string>
    <string name="messenger">Messenger</string>
    <string name="hours_amp_pay"><![CDATA[Hours & Pay]]></string>
    <string name="payment_info">Payment Info</string>
    <string name="employee_info">Employee Info</string>
    <string name="profile">Profile</string>
    <string name="schedule">Schedule</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="avatar">avatar</string>
    <string name="imageButton">imageButton</string>
    <string name="toolbarLogo">toolbarLogo</string>
    <string name="shift_calender_text">Shift Calender</string>
    <string name="schedule_text">Schedule</string>
    <string name="messenger_text">Messenger</string>
    <string name="hours_pay_text"><![CDATA[Hours & Pay]]></string>
    <string name="payment_info_text">Payment Info</string>
    <string name="profile_text">Profile</string>
    <string name="employee_info_text">Employee Info</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="address">Address</string>
    <string name="state">State</string>
    <string name="zip_code">Zip Code</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="emergency_contact">Emergency Contact:</string>
    <string name="relationship">Relationship</string>
    <string name="save">Save</string>
    <string name="hamburger_icon" />
    <string name="open_drawer">Open Navigation Drawer</string>
    <string name="close_drawer">Close Navigation Drawer</string>
</resources>