<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">


    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_shiftCalender"
            android:title="@string/shift_calender" />
        <item
            android:id="@+id/nav_schedule"
            android:title="@string/schedule" />
        <item
            android:id="@+id/nav_messenger"
            android:title="@string/messenger" />
        <item
            android:id="@+id/nav_hoursPay"
            android:title="@string/hours_amp_pay" />
        <item
            android:id="@+id/nav_paymentInfo"
            android:title="@string/payment_info" />
        <item
            android:id="@+id/nav_employeeInfo"
            android:title="@string/employee_info" />
        <item
            android:id="@+id/nav_profile"
            android:title="@string/profile" />
    </group>


</menu>